# x-sql-marimo

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  xsql-dem-1m.py  xsql-dem-h3.py  xsql-dem-rem.py
docs/: xsql-dem-1m-notes.md
